--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,6 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 
 <h1> fbclone / Profile Page</h1>
+
+<p><%= user.name %></p>
+<p><%= user.email %></p>
