--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,6 +1,6 @@
 #layout-footer {
   color: white;
-  background: grey;
+  background: #2196f3;
   padding: 5px 10px;
   display: flex;
   justify-content: flex-start; }
