--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -5,7 +5,8 @@
         text-decoration: none;
     }
 
-    background: grey;
+    // background: grey;
+    background: #2196f3;
     padding: 5px 10px;
     display: flex;
     justify-content: flex-start;
